Starting to integrate backend

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,46 @@
     <string name="register_account">Don\'t have an account? Register now!</string>
     <string name="student">Student</string>
     <string name="instructor">Instructor</string>
+    <string name="school_name">School Name</string>
+    <string name="name">Name</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="name_input">Enter your name</string>
+    <string name="school_input">Enter/select your school name</string>
+    <string name="password_input">At least 8 characters</string>
+    <string name="confirm_password_input">Re-enter your password</string>
+    <string name="email_input">Enter your school email address</string>
+    <string name="register">Register</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="classes">Classes</string>
+    <string name="profile">Profile</string>
+    <string name="submit">Submit</string>
+    <string name="rationale_hint">Enter your reasoning here</string>
+    <string name="rating_4">Rating 4</string>
+    <string name="rating_4_description">Rating 4 Description</string>
+    <string name="rating_3">Rating 3</string>
+    <string name="rating_3_description">Rating 3 Description</string>
+    <string name="rating_2_description">Rating 2 Description</string>
+    <string name="rating_2">Rating 2</string>
+    <string name="rating_1_description">Rating 1 Description</string>
+    <string name="rating_1">Rating 1</string>
+    <string name="question_label">Question:</string>
+    <string name="initial_answer_label">Initial Answer:</string>
+    <string name="initial_answer_rationales_label">Rationales for Selected Answer</string>
+    <string name="alternative_answer_label">Alternative Answer:</string>
+    <string name="alternative_answer_rationales_label">Rationales for Alternative Answer</string>
+    <string name="ratings_label">Ratings:</string>
+    <string name="rationale_label">Rationale:</string>
+    <string name="final_answer_label">Final Answer:</string>
+    <string name="correct_answer_label">Correct Answer:</string>
+    <string name="answer_a_label">(a)</string>
+    <string name="answer_b_label">(b)</string>
+    <string name="answer_c_label">(c)</string>
+    <string name="answer_d_label">(d)</string>
+    <string name="finish">Finish</string>
 </resources>
